# test_forward

./: .gitignore  CMakeLists.txt  Makefile  conf_and_weights.h  llama2_utils.c  llama2_utils.h  main.c  net.c  net.h  quicksort.c  quicksort.h  stats.h  vocabolario.txt
fp16/: conf_and_weights_fp16.h  llama2_utils_fp16.c  llama2_utils_fp16.h  net.c
fp16/utils/: GM.py  genWeights  genWeights.c  run  run.c
fp32/: llama2_utils.c  llama2_utils.h  net.c
fp32/utils/: GM.py  genWeights  genWeights.c  run  run.c
pulp-trainlib-modifiche/lib/include/: pulp_act_fp32.h  pulp_rmsnorm_fp32.h  pulp_train_utils_fp32.h
pulp-trainlib-modifiche/lib/sources/: pulp_act_fp32.c  pulp_train_utils_fp32.c
utils/: GM.py  genRndWeights  genRndWeights.c  genWeights  genWeights.c  run  run.c
